fix render on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -111,6 +111,7 @@ ul {
 	z-index: 1000;
 	animation: curtain 0.2s linear forwards;
 	padding-top: 20px;
+	max-width: 600px;
 }
 
 @keyframes curtain {
